# SevenEngine

./: .gitignore  ClearProject.bat  GenerateProjectFiles.bat  GerneateProjectFile.bat  LICENSE  OpenProject.bat  README.md  imgui.ini
CMakeFile/: CMakeLists.txt  SdkList.txt
Config/: ModuleConfig.json
Doc/: Shader资源化.md  Todo.md  Untitled-1.md  新建 文本文档.md  材质系统.md  缠论.md
Doc/技术文档/: 一种新的各向异性模型的法线计算及理论推导.md  新的平行光View矩阵推导.md
Doc/未来的备忘录/: ReadMe.md
Doc/杂记随笔/: RTR4读书笔记.md  ReadMe.md  RenderGraph.md  渲染线程，逻辑线程与UI.md  渲染资源.md
Doc/正经文档/: ReadMe.md  SevenEngine_001-项目结构与编码规范.md  SevenEngine_002-类型系统.md  SevenEngine_003-UI.md  SevenEngine_003-渲染模块(1) - 同步机制.md  SevenEngine_003-渲染模块.md  SevenEngine_004-UI.md  SevenEngine_004-渲染模块(2) - 渲染代理的封装与设计.md  SevenEngine_004-渲染模块.md  TODO与备忘.md  公式备忘.md  发现的一些坑.md  编码规范.md
Sdk/: SdkList.txt
Sdk/Fbx/: .gitattributes
Sdk/Fbx/Debug/: .gitattributes
Sdk/Fbx/Debug/Lib/: libfbxsdk-mt.lib  libxml2-md.lib  libxml2-mt.lib  zlib-md.lib  zlib-mt.lib
Sdk/Fbx/Release/Lib/: libfbxsdk-md.lib  libxml2-md.lib  libxml2-mt.lib  zlib-md.lib  zlib-mt.lib
Sdk/GMQuant/Include/: error.h  gmapi.h  gmdef.h  strategy.h
Sdk/GMQuant/Lib/: gmsdk.lib
Sdk/Imgui/Include/: imconfig.h  imgui.h  imgui_internal.h  imstb_textedit.h
Sdk/Imgui/Source/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
Sdk/Implot/Include/: implot.h  implot_internal.h
Sdk/Implot/Source/: implot.cpp  implot_items.cpp
Shaders/: simple.shader
Source/Editor/EditorMain/EditorMain/: MessageBoxWindow.h
Source/Editor/EditorMain/Private/: EditorMain.cpp  FbxImporterWindow.cpp  FbxImporterWindow.h  MessageBoxWindow.cpp  WorldContentWindow.cpp  WorldContentWindow.h
Source/Editor/GMQuant/GMQuant/: GMQuantModule.h
Source/Editor/GMQuant/Private/: GMQuantConfigFile.h  GMQuantConfigWindow.cpp  GMQuantConfigWindow.h  GMQuantMainWindow.cpp  GMQuantMainWindow.h  GMQuantModuleImpl.cpp  GMQuantModuleImpl.h
Source/Editor/GMQuantCore/GMQuantCore/: GMQuantCoreModule.h  QuantStrategy.h  QuantStrategyContext.h  QuantType.h
Source/Editor/GMQuantCore/Private/: GMQuantCoreModuleImpl.cpp  GMQuantCoreModuleImpl.h  GMQuantStrategyFramework.cpp  GMQuantStrategyFramework.h
Source/Engine/: SevenGame.Target.cs
Source/Engine/CRTLibrary/: CRTLibrary.Build.cs
Source/Engine/CRTLibrary/CRTLibrary/: CRTLibrary.h
Source/Engine/CRTLibrary/Private/: CRTFunctionDeclear.h  CRTLibrary.cpp  CRTLibraryImplWarper.cpp  CRTLibraryImplWarper.h
Source/Engine/CRTLibrary/Public/: CRTLibrary.h
Source/Engine/Core/: Core.build.cs
Source/Engine/Core/Core/: PostWindowsApi.h  windowsEx.h
Source/Engine/Core/Private/: Localize.cpp  Thread.cpp  windowsEx.cpp
Source/Engine/Core/Public/: Localize.h  Thread.h
Source/Engine/Engine/Engine/: Engine.h  RenderScene.h  World.h
Source/Engine/Engine/Private/: Engine.cpp  RenderScene.cpp  World.cpp
Source/Engine/EngineMain/: EngineMain.Build.cs
Source/Engine/EngineMain/Private/: EngineLoop.cpp  EngineLoop.h  EngineMain.cpp  WinMain.cpp
Source/Engine/EngineMain/Public/: EngineMain.h
Source/Engine/GameFramework/GameFramework/: ActorBase.h  ComponentBase.h  GameObject.h  StaticMeshComponent.h  Transform.h  World.h
Source/Engine/Launch/: Launch.Build.cs
Source/Engine/Launch/Private/: WinMain.cpp
Source/Engine/RDI/Private/: RDIModuleImpl.cpp  RDIModuleImpl.h  RDIPixelFormat.cpp
Source/Engine/RDI/RDI/: RDIFunctionHelper.h  RDIModule.h  RDIPixelFormat.h  RDITypeTraits.h  RDITypeTraits.inl
Source/Engine/Render/Private/: DeferFrameTask.h  FrameResource.h  FrameResources.h  ImguiRenderGraph.cpp  ImguiRenderGraph.h  RenderCommandListImpl.cpp  RenderCommandListImpl.h  RenderContent.cpp  RenderContext.cpp  RenderModuleImpl.cpp  RenderModuleImpl.h  RenderResource.cpp  RenderResource.h
Source/Engine/Render/Render/: RenderCommandList.h  RenderContent.h  RenderContext.h  RenderModule.h
Source/Engine/RenderGraph/Private/: 3DWorldForwardRenderGraph.cpp  WorldForwardRenderGraph.cpp
Source/Engine/RenderGraph/RenderGraph/: 3DWorldForwardRenderGraph.cpp  3DWorldForwardRenderGraph.h  3DWorldRenderGraph.h  WorldForwardRenderGraph.h  WorldRenderGraph.h
Source/Engine/Renderer/Private/: BaseRenderer.cpp
Source/Engine/Renderer/Renderer/: BaseRenderer.h
Source/Engine/Resource/Private/: ResourceBase.cpp  ResourceModuleImpl.cpp  ResourceModuleImpl.h  ResourceProxy.cpp
Source/Engine/Resource/Resource/: ResourceBase.h  ResourceModule.h  ResourceProxy.h
Source/Engine/UI/Private/: UIBackPlane.cpp  UIContainer.cpp  UIElement.cpp  UIModuleImpl.cpp  UIModuleImpl.h  UIObject.cpp  UIWindow.cpp  UIWindow.h
Source/Engine/UI/Public/: UIBackPlane.h  UIContainer.h  UIElement.h  UIModule.h  UIObject.h
Source/Engine/UI/UI/: UIBackPlane.h  UIContainer.h  UIElement.h  UIModule.h  UIObject.h  WindowInterface.h
Source/Engine/WindowsPlatform/: WindowsPlatform.build.cs
Source/Engine/WindowsPlatform/Private/: ErrorCode.cpp  InnerWindows.h  WindowsPlatformApi.cpp  WindowsPlatformApiImplWarper.cpp  WindowsPlatformApiImplWarper.h
Source/Engine/WindowsPlatform/Public/: ErrorCode.h  WindowsConstants.h  WindowsPlatformApi.h  WindowsTypes.h
Source/Engine/WindowsPlatform/WindowsPlatform/: ErrorCode.h  WindowsConstants.h  WindowsPlatformApi.h  WindowsTypes.h
Source/Programs/DotNETCommon/: MetaData.cs
Source/Programs/DotNETCommon/DotNETUtilities/: DotNETUtilities.csproj  ManagedProcess.cs
Source/Programs/UnrealBuildTool/: UnrealBuildTool.cs  UnrealBuildTool.csproj
Source/Programs/UnrealBuildTool/Configuration/: BuildConfiguration.cs  ModuleRules.cs  TargetDescriptor.cs  TargetInfo.cs  TargetRules.cs  UEBuildBinary.cs  UEBuildBundleResource.cs  UEBuildDeploy.cs  UEBuildDeployTarget.cs  UEBuildFramework.cs  UEBuildModule.cs  UEBuildModuleCPP.cs  UEBuildModuleExternal.cs  UEBuildPlatform.cs  UEBuildPlatformFactory.cs  UEBuildPlatformSDK.cs  UEBuildPlugin.cs  UEBuildTarget.cs
Source/Programs/UnrealBuildTool/Platform/: UEBuildWindows.cs  VCEnvironment.cs  VCToolChain.cs  WinResources.cs  WindowsDeploy.cs  WindowsExports.cs  WindowsProjectGenerator.cs
(+292 files in other folders)
